Added colorCode changes

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -551,7 +551,7 @@ input.autocomplete {
 .redmine-logo svg{
   width: 26px;
   height: 26px;
-  background-image: url('../images/redmine_logo.png');
+  background-image: url('../images/logo.png');
   background-repeat: no-repeat;
   background-size: 26px;
   margin: 5px 12px 5px 12px;
