--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -578,7 +578,6 @@ html, body{
   color: #172b4d;
   font-size: 14px;
   font-weight: 400;
-  line-height: 20px;
   background-color: #FFFFFF;
 }
 
@@ -589,18 +588,7 @@ table.list td{
     border-color: #e6e6e6;
     text-align:left;
     vertical-align:middle;
-}
-
-table.list thead th {
-    border-collapse: collapse;
-    border-width:  1px 0px 1px 1px;
-    border-style: solid;
-    border-color: #e6e6e6;
-    padding: 7px;
-}
-
-table.list thead tr{
-  height: 42px !important;
+    padding: 0px 7.5px 0px 7.5px;
 }
 
 table.list td.checkbox {
@@ -610,34 +598,54 @@ table.list td.checkbox {
 }
 
 table.list, .table-list {
-  border:none;
   border-width:  0px 1px 0px 0px;
   border-style: solid;
   border-color: #e6e6e6;
-  width: 100%;
-  margin-bottom: 4px;
-  border-radius: 3px;
-  border-spacing: 0px;
-  overflow: hidden;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  border-radius: 6px;
 }
 
 table.list th, .table-list-header {
   text-align:left;
   background-color:#f7f8f9;
-  padding: 1px;
   white-space:nowrap;
   font-weight:bold;
-  /* height: 40px; */
-  color: #6b778c;
+  height: 42px; 
+  color: #6b778c; 
+  align-content: center;
+  border-width:  1px 0px 1px 1px;
+  border-style: solid;
+  border-color: #e6e6e6;
+  padding: 0px 7.5px 0px 7.5px;
+} 
+
+table.list th:hover, .table-list-header:hover {
+  background-color: #e9ebee; 
+  box-shadow: inset 0 0 0 3px #f7f8f9; 
+  color: #657288; 
+}
+
+/**** table curve *****/
+table.list thead th:first-child {
+  border-top-left-radius: 6px;  
+}
+
+table.list thead th:last-child {
+  border-top-right-radius: 6px; 
+}
+
+table.list tbody tr:last-of-type td:first-child {
+  border-bottom-left-radius: 6px;  
+}
+
+table.list tbody tr:last-of-type td:last-child {
+    border-bottom-right-radius: 6px;  
 }
 
 /***** Links *****/
 table.list th a,
 table.list th a:link,
 table.list th a:visited {
-    color: #6b778c;
+    color: #808a9c;
     text-decoration: none;
 }
 
@@ -654,7 +662,7 @@ table.list td a:active {
 	text-decoration: underline;
 }
 
-table.list th a:hover, table.list th a:active{ color: #6b778c; text-decoration: underline;}
+table.list th a:hover, table.list th a:active{ color: #657288; text-decoration: underline;}
 
 table.list:not(.odd-even) tbody tr:nth-child(odd), .odd, #issue-changesets div.changeset:nth-child(odd) { background-color:#ffffff; height: 42px !important;}
 table.list:not(.odd-even) tbody tr:nth-child(even), .even, #issue-changesets div.changeset:nth-child(even) { background-color: rgb(255, 255, 255);
