--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -404,17 +404,23 @@ div#clockINOUT, div#issueLog, div#notification, div#project-jump{
 .toggle-icon{
   position: fixed;
   top: 90px;
-  left: 230px;
+  left: 225px;
   width: 25px;
   height: 25px;
   z-index: 100;
-  border-radius: 99em;
+  border-radius: 50%;
   background-color: #0c66e4;
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0 2px 10px rgba(0,0,0,.2);
   cursor: pointer;
+  fill: #FFFFFF
+}
+
+.toggle-icon:hover{
+  background-color: #006aff;
+  border: none;
+  fill: #FFFFFF
 }
 
 #left-nav.sidenav-left{
@@ -504,7 +510,7 @@ div#clockINOUT, div#issueLog, div#notification, div#project-jump{
 }
 
 #admin-menu a{
-  background: unset;
+  background: unset !important;
 }
 
 #admin-menu li {
@@ -612,36 +618,36 @@ table.list th, .table-list-header {
   background-color:#f7f8f9;
   white-space:nowrap;
   font-weight:bold;
-  height: 42px; 
-  color: #6b778c; 
+  height: 42px;
+  color: #6b778c;
   align-content: center;
   border-width:  1px 0px 1px 1px;
   border-style: solid;
   border-color: #e6e6e6;
   padding: 0px 7.5px 0px 7.5px;
-} 
+}
 
 table.list th:hover, .table-list-header:hover {
-  background-color: #e9ebee; 
-  box-shadow: inset 0 0 0 3px #f7f8f9; 
-  color: #657288; 
+  background-color: #e9ebee;
+  box-shadow: inset 0 0 0 3px #f7f8f9;
+  color: #657288;
 }
 
 /**** table curve *****/
 table.list thead th:first-child {
-  border-top-left-radius: 6px;  
+  border-top-left-radius: 6px;
 }
 
 table.list thead th:last-child {
-  border-top-right-radius: 6px; 
+  border-top-right-radius: 6px;
 }
 
 table.list tbody tr:last-of-type td:first-child {
-  border-bottom-left-radius: 6px;  
+  border-bottom-left-radius: 6px;
 }
 
 table.list tbody tr:last-of-type td:last-child {
-    border-bottom-right-radius: 6px;  
+    border-bottom-right-radius: 6px;
 }
 
 /***** Links *****/
@@ -839,11 +845,87 @@ div.width33{
 }
 
 #quick-search #q {
-width: 156px;
+  width: 156px;
 }
 
 #projects-index ul.projects div.root a.project,#projects-index a.icon-user {
   font-family: Roboto, 'Fira Sans', Oxygen, 'Open Sans', Ubuntu, sans-serif;
   font-weight: 600;
   color: #0052CC
+}
+
+#quick-search input[type='text']{
+  height: 32px;
+}
+
+.icon-time-add{
+  background-image: url('data:image/svg+xml, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2024%2024%22%20style%3D%22fill%3A%20%235d5d5d%3B%22%3E%3Cpath%20d%3D%22M12%204c-4.879%200-9%204.121-9%209s4.121%209%209%209%209-4.121%209-9-4.121-9-9-9zm4%2010h-3v3h-2v-3H8v-2h3V9h2v3h3v2zm1.284-10.293%201.412-1.416%203.01%203-1.413%201.417zM5.282%202.294%206.7%203.706l-2.99%203-1.417-1.413z%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E');
+}
+
+.icon-edit{
+  background-image: url('data:image/svg+xml, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%20512%20512%22%20style%3D%22fill%3A%20%235d5d5d%3B%22%3E%3Cpath%20d%3D%22M362.7%2019.3L314.3%2067.7%20444.3%20197.7l48.4-48.4c25-25%2025-65.5%200-90.5L453.3%2019.3c-25-25-65.5-25-90.5%200zm-71%2071L58.6%20323.5c-10.4%2010.4-18%2023.3-22.2%2037.4L1%20481.2C-1.5%20489.7%20.8%20498.8%207%20505s15.3%208.5%2023.7%206.1l120.3-35.4c14.1-4.2%2027-11.8%2037.4-22.2L421.7%20220.3%20291.7%2090.3z%22%2F%3E%3C%2Fsvg%3E');
+}
+
+.icon-del{
+  background-image: url('data:image/svg+xml, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20448%20512%22%20width%3D%2216%22%20height%3D%2216%22%20style%3D%22fill%3A%20%235d5d5d%3B%22%3E%3Cpath%20d%3D%22M135.2%2017.7L128%2032%2032%2032C14.3%2032%200%2046.3%200%2064S14.3%2096%2032%2096l384%200c17.7%200%2032-14.3%2032-32s-14.3-32-32-32l-96%200-7.2-14.3C307.4%206.8%20296.3%200%20284.2%200L163.8%200c-12.1%200-23.2%206.8-28.6%2017.7zM416%20128L32%20128%2053.2%20467c1.6%2025.3%2022.6%2045%2047.9%2045l245.8%200c25.3%200%2046.3-19.7%2047.9-45L416%20128z%22%2F%3E%3C%2Fsvg%3E');
+}
+
+.icon-add{
+  background-image: url('data:image/svg+xml, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2024%2024%22%20style%3D%22fill%3A%20%235d5d5d%3B%22%3E%3Cpath%20d%3D%22M12%202C6.486%202%202%206.486%202%2012s4.486%2010%2010%2010%2010-4.486%2010-10S17.514%202%2012%202zm5%2011h-4v4h-2v-4H7v-2h4V7h2v4h4v2z%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E');
+}
+
+.icon-reload{
+  background-image: url('data:image/svg+xml, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20style%3D%22fill%3A%20%235d5d5d%3B%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20d%3D%22M48.5%20224L40%20224c-13.3%200-24-10.7-24-24L16%2072c0-9.7%205.8-18.5%2014.8-22.2s19.3-1.7%2026.2%205.2L98.6%2096.6c87.6-86.5%20228.7-86.2%20315.8%201c87.5%2087.5%2087.5%20229.3%200%20316.8s-229.3%2087.5-316.8%200c-12.5-12.5-12.5-32.8%200-45.3s32.8-12.5%2045.3%200c62.5%2062.5%20163.8%2062.5%20226.3%200s62.5-163.8%200-226.3c-62.2-62.2-162.7-62.5-225.3-1L185%20183c6.9%206.9%208.9%2017.2%205.2%2026.2s-12.5%2014.8-22.2%2014.8L48.5%20224z%22%2F%3E%3C%2Fsvg%3E');
+}
+
+.icon-action{
+  background-image: url('data:image/svg+xml, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2024%2024%22%20style%3D%22fill%3A%20%235d5d5d%3B%22%3E%3Cpath%20d%3D%22M12%2010c-1.1%200-2%20.9-2%202s.9%202%202%202%202-.9%202-2-.9-2-2-2zm0-6c-1.1%200-2%20.9-2%202s.9%202%202%202%202-.9%202-2-.9-2-2-2zm0%2012c-1.1%200-2%20.9-2%202s.9%202%202%202%202-.9%202-2-.9-2-2-2z%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E');
+}
+
+.icon-checked{
+  background-image: url('data:image/svg+xml, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%20448%20512%22%20style%3D%22fill%3A%20%235d5d5d%3B%22%3E%3Cpath%20d%3D%22M438.6%20105.4c12.5%2012.5%2012.5%2032.8%200%2045.3l-256%20256c-12.5%2012.5-32.8%2012.5-45.3%200l-128-128c-12.5-12.5-12.5-32.8%200-45.3s32.8-12.5%2045.3%200L160%20338.7%20393.4%20105.4c12.5-12.5%2032.8-12.5%2045.3%200z%22%2F%3E%3C%2Fsvg%3E');
+}
+
+.icon-email-add{
+  background-image: url('data:image/svg+xml, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%20512%20512%22%20style%3D%22fill%3A%20%235d5d5d%3B%22%3E%3Cpath%20d%3D%22M48%2064C21.5%2064%200%2085.5%200%20112c0%2015.1%207.1%2029.3%2019.2%2038.4L236.8%20313.6c11.4%208.5%2027%208.5%2038.4%200L492.8%20150.4c12.1-9.1%2019.2-23.3%2019.2-38.4c0-26.5-21.5-48-48-48L48%2064zM0%20176L0%20384c0%2035.3%2028.7%2064%2064%2064l384%200c35.3%200%2064-28.7%2064-64l0-208L294.4%20339.2c-22.8%2017.1-54%2017.1-76.8%200L0%20176z%22%2F%3E%3C%2Fsvg%3E');
+}
+
+.icon-settings{
+  background-image: url('data:image/svg+xml, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%20512%20512%22%20style%3D%22fill%3A%20%235d5d5d%3B%22%3E%3Cpath%20d%3D%22M495.9%20166.6c3.2%208.7%20.5%2018.4-6.4%2024.6l-43.3%2039.4c1.1%208.3%201.7%2016.8%201.7%2025.4s-.6%2017.1-1.7%2025.4l43.3%2039.4c6.9%206.2%209.6%2015.9%206.4%2024.6c-4.4%2011.9-9.7%2023.3-15.8%2034.3l-4.7%208.1c-6.6%2011-14%2021.4-22.1%2031.2c-5.9%207.2-15.7%209.6-24.5%206.8l-55.7-17.7c-13.4%2010.3-28.2%2018.9-44%2025.4l-12.5%2057.1c-2%209.1-9%2016.3-18.2%2017.8c-13.8%202.3-28%203.5-42.5%203.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-12.5-57.1c-15.8-6.5-30.6-15.1-44-25.4L83.1%20425.9c-8.8%202.8-18.6%20.3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4%206.4-24.6l43.3-39.4C64.6%20273.1%2064%20264.6%2064%20256s.6-17.1%201.7-25.4L22.4%20191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9%209.7-23.3%2015.8-34.3l4.7-8.1c6.6-11%2014-21.4%2022.1-31.2c5.9-7.2%2015.7-9.6%2024.5-6.8l55.7%2017.7c13.4-10.3%2028.2-18.9%2044-25.4l12.5-57.1c2-9.1%209-16.3%2018.2-17.8C227.3%201.2%20241.5%200%20256%200s28.7%201.2%2042.5%203.5c9.2%201.5%2016.2%208.7%2018.2%2017.8l12.5%2057.1c15.8%206.5%2030.6%2015.1%2044%2025.4l55.7-17.7c8.8-2.8%2018.6-.3%2024.5%206.8c8.1%209.8%2015.5%2020.2%2022.1%2031.2l4.7%208.1c6.1%2011%2011.4%2022.4%2015.8%2034.3zM256%20336a80%2080%200%201%200%200-160%2080%2080%200%201%200%200%20160z%22%2F%3E%3C%2Fsvg%3E');
+}
+
+.icon-user{
+  background-image: url('data:image/svg+xml, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%20448%20512%22%20style%3D%22fill%3A%20%235d5d5d%3B%22%3E%3Cpath%20d%3D%22M224%20256A128%20128%200%201%200%20224%200a128%20128%200%201%200%200%20256zm-45.7%2048C79.8%20304%200%20383.8%200%20482.3C0%20498.7%2013.3%20512%2029.7%20512l388.6%200c16.4%200%2029.7-13.3%2029.7-29.7C448%20383.8%20368.2%20304%20269.7%20304l-91.4%200z%22%2F%3E%3C%2Fsvg%3E');
+}
+
+.icon-copy-link{
+  background-image: url('data:image/svg+xml, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%20640%20512%22%20style%3D%22fill%3A%20%235d5d5d%3B%22%3E%3Cpath%20d%3D%22M579.8%20267.7c56.5-56.5%2056.5-148%200-204.5c-50-50-128.8-56.5-186.3-15.4l-1.6%201.1c-14.4%2010.3-17.7%2030.3-7.4%2044.6s30.3%2017.7%2044.6%207.4l1.6-1.1c32.1-22.9%2076-19.3%20103.8%208.6c31.5%2031.5%2031.5%2082.5%200%20114L422.3%20334.8c-31.5%2031.5-82.5%2031.5-114%200c-27.9-27.9-31.5-71.8-8.6-103.8l1.1-1.6c10.3-14.4%206.9-34.4-7.4-44.6s-34.4-6.9-44.6%207.4l-1.1%201.6C206.5%20251.2%20213%20330%20263%20380c56.5%2056.5%20148%2056.5%20204.5%200L579.8%20267.7zM60.2%20244.3c-56.5%2056.5-56.5%20148%200%20204.5c50%2050%20128.8%2056.5%20186.3%2015.4l1.6-1.1c14.4-10.3%2017.7-30.3%207.4-44.6s-30.3-17.7-44.6-7.4l-1.6%201.1c-32.1%2022.9-76%2019.3-103.8-8.6C74%20372%2074%20321%20105.5%20289.5L217.7%20177.2c31.5-31.5%2082.5-31.5%20114%200c27.9%2027.9%2031.5%2071.8%208.6%20103.9l-1.1%201.6c-10.3%2014.4-6.9%2034.4%207.4%2044.6s34.4%206.9%2044.6-7.4l1.1-1.6C433.5%20260.8%20427%20182%20377%20132c-56.5-56.5-148-56.5-204.5%200L60.2%20244.3z%22%2F%3E%3C%2Fsvg%3E');
+}
+
+.icon-copy{
+  background-image: url('data:image/svg+xml, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%20448%20512%22%20style%3D%22fill%3A%20%235d5d5d%3B%22%3E%3Cpath%20d%3D%22M208%200L332.1%200c12.7%200%2024.9%205.1%2033.9%2014.1l67.9%2067.9c9%209%2014.1%2021.2%2014.1%2033.9L448%20336c0%2026.5-21.5%2048-48%2048l-192%200c-26.5%200-48-21.5-48-48l0-288c0-26.5%2021.5-48%2048-48zM48%20128l80%200%200%2064-64%200%200%20256%20192%200%200-32%2064%200%200%2048c0%2026.5-21.5%2048-48%2048L48%20512c-26.5%200-48-21.5-48-48L0%20176c0-26.5%2021.5-48%2048-48z%22%2F%3E%3C%2Fsvg%3E');
+}
+
+.icon-fav{
+  background-image: url('data:image/svg+xml, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%20576%20512%22%20style%3D%22fill%3A%20%235d5d5d%3B%22%3E%3Cpath%20d%3D%22M316.9%2018C311.6%207%20300.4%200%20288.1%200s-23.4%207-28.8%2018L195%20150.3%2051.4%20171.5c-12%201.8-22%2010.2-25.7%2021.7s-.7%2024.2%207.9%2032.7L137.8%20329%20113.2%20474.7c-2%2012%203%2024.2%2012.9%2031.3s23%208%2033.8%202.3l128.3-68.5%20128.3%2068.5c10.8%205.7%2023.9%204.9%2033.8-2.3s14.9-19.3%2012.9-31.3L438.5%20329%20542.7%20225.9c8.6-8.5%2011.7-21.2%207.9-32.7s-13.7-19.9-25.7-21.7L381.2%20150.3%20316.9%2018z%22%2F%3E%3C%2Fsvg%3E');
+}
+
+.icon-save{
+  background-image: url('data:image/svg+xml, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2024%2024%22%20style%3D%22fill%3A%20%235d5d5d%3B%22%3E%3Cpath%20d%3D%22M5%2021h14a2%202%200%200%200%202-2V8l-5-5H5a2%202%200%200%200-2%202v14a2%202%200%200%200%202%202zM7%205h4v2h2V5h2v4H7V5zm0%208h10v6H7v-6z%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E');
+}
+
+.icon-import{
+  background-image: url('data:image/svg+xml, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%20512%20512%22%20style%3D%22fill%3A%20%235d5d5d%3B%22%3E%3Cpath%20d%3D%22M128%2064c0-35.3%2028.7-64%2064-64L352%200l0%20128c0%2017.7%2014.3%2032%2032%2032l128%200%200%20288c0%2035.3-28.7%2064-64%2064l-256%200c-35.3%200-64-28.7-64-64l0-112%20174.1%200-39%2039c-9.4%209.4-9.4%2024.6%200%2033.9s24.6%209.4%2033.9%200l80-80c9.4-9.4%209.4-24.6%200-33.9l-80-80c-9.4-9.4-24.6-9.4-33.9%200s-9.4%2024.6%200%2033.9l39%2039L128%20288l0-224zm0%20224l0%2048L24%20336c-13.3%200-24-10.7-24-24s10.7-24%2024-24l104%200zM512%20128l-128%200L384%200%20512%20128z%22%2F%3E%3C%2Fsvg%3E');
+}
+
+.icon-collapsed{
+  background-image: url('data:image/svg+xml, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2024%2024%22%20style%3D%22fill%3A%20%235d5d5d%3B%22%3E%3Cpath%20d%3D%22M10.061%2019.061%2017.121%2012l-7.06-7.061-2.122%202.122L12.879%2012l-4.94%204.939z%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E');
+}
+
+.icon-expanded{
+  background-image: url('data:image/svg+xml, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2024%2024%22%20style%3D%22fill%3A%20%235d5d5d%3B%22%3E%3Cpath%20d%3D%22M16.939%207.939%2012%2012.879l-4.939-4.94-2.122%202.122L12%2017.121l7.061-7.06z%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E');
+}
+
+.icon-actions{
+  background-image: url('data:image/svg+xml, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2024%2024%22%20style%3D%22fill%3A%20%235d5d5d%3B%22%3E%3Cpath%20d%3D%22M12%2010c-1.1%200-2%20.9-2%202s.9%202%202%202%202-.9%202-2-.9-2-2-2zm0-6c-1.1%200-2%20.9-2%202s.9%202%202%202%202-.9%202-2-.9-2-2-2zm0%2012c-1.1%200-2%20.9-2%202s.9%202%202%202%202-.9%202-2-.9-2-2-2z%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E');
 }
