--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -298,6 +298,8 @@ div#clockINOUT, div#issueLog, div#notification, div#project-jump{
 #header h1{
   margin: 0px;
   line-height: normal;
+  font-weight: bold;
+  font-size: 2em;
 }
 
 #main-menu{
@@ -512,6 +514,7 @@ div#clockINOUT, div#issueLog, div#notification, div#project-jump{
 
 #admin-menu a{
   background: unset !important;
+  padding-left: 10px;
 }
 
 #admin-menu li {
@@ -894,8 +897,10 @@ a.icon:hover svg, a.icon-only:hover svg {
   stroke: #44546f;
   width: 24px;
   height: 24px;
+  stroke-width: 2.1px;
 }
 
 #admin-menu li.highlighted svg {
   stroke: #016bff;
+  fill: none !important;
 }
