--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -912,3 +912,7 @@ a.icon:hover svg, a.icon-only:hover svg {
 table.list #pay-link{
   white-space: nowrap;
 }
+
+html>body .tabular p{
+  overflow: unset;
+}
