Fixed timesheet scroll issue

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -914,6 +914,10 @@ table.list #pay-link{
   white-space: nowrap;
 }
 
+#issueTable {
+  display: block;
+}
+
 #issueTable, #wktimeStatus {
   overflow: auto;
 }
