--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -33,7 +33,6 @@
 }
 
 #top-menu #my-page-icon {
-  /* background-image: url('../../../images/user.png'); */
   background-image: url('data:image/svg+xml, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2229%22%20height%3D%2229%22%20viewBox%3D%220%200%2024%2024%22%20style%3D%22fill%3A%20%2344546f%22%3E%3Cpath%20d%3D%22M12%202C6.579%202%202%206.579%202%2012s4.579%2010%2010%2010%2010-4.579%2010-10S17.421%202%2012%202zm0%205c1.727%200%203%201.272%203%203s-1.273%203-3%203c-1.726%200-3-1.272-3-3s1.274-3%203-3zm-5.106%209.772c.897-1.32%202.393-2.2%204.106-2.2h2c1.714%200%203.209.88%204.106%202.2C15.828%2018.14%2014.015%2019%2012%2019s-3.828-.86-5.106-2.228z%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E');
 }
 
@@ -702,7 +701,7 @@ form#query_form fieldset > div > b > label {
 }
 
 /*submit button change */
-input[type="submit"], button {
+input[type="submit"], button, .ui-dialog .ui-dialog-buttonpane button {
 	-moz-box-align: baseline;
 	align-items: baseline;
 	border-width: 0px;
@@ -904,4 +903,9 @@ html>body .tabular p, table.list, .table-list {
 
 .ui-widget-header {
   background-color:#f7f8f9;
+}
+
+html>body  {
+  overflow: unset;
+  line-height: inherit;
 }
